# DpiBypass

./: .gitignore  README-ru.md  build-apk.ps1  install-android-sdk.ps1  install_sdk.py  release-signing.properties.example
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: list-google.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/res/drawable/: bg_main_gradient.xml  bg_probe_panel.xml  bg_status_dot_connected.xml  bg_status_dot_connecting.xml  bg_status_dot_disconnected.xml  ic_app_logo.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_telegram_24.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_settings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
scripts/: build-debug.bat  build-release.bat  fetch-tgwsproxy.ps1  setup-signing.ps1
windows/: .gitignore  DpiBypass-GUI.ps1  DpiBypass.bat  DpiBypass.spec  DpiBypassLite.bat  README-ru.md  build-byedpi.ps1  build-exe-lite.ps1  build-exe.ps1  build-package.ps1  requirements.txt  setup-lite.ps1  setup.ps1
windows/app/: main.py  main_lite.py
windows/app/core/: admin.py  autostart.py  byedpi.py  config.py  discord.py  discord_autostart.py  engine.py  lite_autostart.py  lite_config.py  paths.py  presets.py  system_proxy.py  tgws.py  winws.py  zapret_benchmark.py  zapret_presets.py  zapret_runtime.py
windows/app/data/: discord-hosts.txt
windows/app/ui/: discord_confirm.py  discord_tune.py  tk_safe.py
windows/lib/: ByeDpiManager.ps1  Config.ps1  Presets.ps1  SystemProxy.ps1  TgWsManager.ps1
(+34 files in other folders)
